Add identity-aware agent execution and observability planes