@@ -9,6 +9,8 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.mvc.method.annotation.SseEmitter;
 
 import java.io.IOException;
+import com.aiguard.ai.gateway.identity.IdentityResolver;
+import org.springframework.security.core.Authentication;
 
 @RestController
 @RequestMapping("/api/chat")
@@ -16,23 +18,24 @@ import java.io.IOException;
 public class ChatController {
 
     private final ChatService chatService;
+    private final IdentityResolver identityResolver;
 
     // Non-streaming endpoint (normal JSON reply)
     @PostMapping
-    public ChatResponseDto chat(@RequestBody ChatRequestDto request) {
+    public ChatResponseDto chat(@RequestBody ChatRequestDto request, Authentication auth) {
 
         String lastUserMsg = (request.messages() == null || request.messages().isEmpty())
                 ? ""
                 : request.messages().get(request.messages().size() - 1).content();
 
-        String reply = chatService.reply(request.userId(), lastUserMsg);
+        String reply = chatService.reply(identityResolver.require(auth), lastUserMsg);
 
         return new ChatResponseDto(request.sessionId(), reply);
     }
 
     // Streaming SSE endpoint
     @PostMapping(value = "/stream", produces = MediaType.TEXT_EVENT_STREAM_VALUE)
-    public SseEmitter chatStream(@RequestBody ChatRequestDto request) {
+    public SseEmitter chatStream(@RequestBody ChatRequestDto request, Authentication auth) {
 
         SseEmitter emitter = new SseEmitter(0L); // no timeout
 
@@ -40,9 +43,10 @@ public class ChatController {
                 ? ""
                 : request.messages().get(request.messages().size() - 1).content();
 
-        new Thread(() -> {
+        var identity = identityResolver.require(auth);
+        Thread.startVirtualThread(() -> {
             try {
-                chatService.streamReply(request.userId(), lastUserMsg, token -> {
+                chatService.streamReply(identity, lastUserMsg, token -> {
                     try {
                         emitter.send(SseEmitter.event().name("token").data(token));
                     } catch (IOException e) {
@@ -56,7 +60,7 @@ public class ChatController {
             } catch (Exception ex) {
                 emitter.completeWithError(ex);
             }
-        }).start();
+        });
 
         return emitter;
     }
